# app/Http/Controllers/Api/MedaiController.php
@@ -7,27 +7,7 @@ use App\Models\Media;
 use Illuminate\Http\Request;
 
 
-/**
- * @OA\Get(
- *  path="/api/me",
- *  summary="Me data",
- *  description="",
- *  tags={"Me"},
- *  @OA\Parameter(
- *      name="name",
- *      in="query",
- *      description="Provide your name",
- *      required=true,
- *  ),
- *  @OA\Response(
- *      response=200,
- *      description="OK",
- *      @OA\MediaType(
- *          mediaType="application/json",
- *      )
- *   ),
- * )
- */
+
 
 class MedaiController extends Controller
 {
