# routes/api.php
@@ -21,6 +21,7 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
+// Route::post('/register', [AuthController::class, 'register']);
 Route::post('/register', [AuthController::class, 'register']);
 Route::post('/login', [AuthController::class, 'login']);
 Route::post('/logout', [AuthController::class, 'logout']);
